Fixed sonar issues and organized imports.