@@ -5,14 +5,13 @@ import lombok.NoArgsConstructor;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class BillingKpiMapper {
 
     public static List<BillingKpi> mapAll(Collection<CertificatePrintQueueItem> certificatePrintQueueItems){
-        return  certificatePrintQueueItems.stream().map(BillingKpiMapper::map).collect(Collectors.toList());
+        return  certificatePrintQueueItems.stream().map(BillingKpiMapper::map).toList();
     }
 
     private static BillingKpi map(CertificatePrintQueueItem certificatePrintQueueItem){
